# pyfenix

./: README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: pytest.yml
client/fenix/: __init__.py  client_event_loop.py  event.py
client/tests/doubles/: __init__.py  client_api_stub.py  grpc_client_api_stub.py  gui_event_handler_stub.py
client/tests/unit/: test_client_event_loop.py
pyfenix/: __init__.py  __main__.py  api.py  client_event_loop.py  gui.py  tk_gui.py  ws_api.py
tests/doubles/: __init__.py  client_api_stub.py  gui_event_handler_stub.py
tests/unit/: test_client_event_loop.py  test_ws_api.py
